--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <label>Stopa zwrotu (%)</label>
         <input type="number" id="ikzeReturn" value="12.0" step="0.01" />
       </div>
-      <button type="submit">Oblicz</button>
+      <button type="submit" class="btn-oblicz">Oblicz</button>
     </form>
     <p id="result">Łączna stopa zwrotu: --%</p>
     <canvas id="pieChart" width="300" height="300"></canvas>
