--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Kalkulator Portfela (PLN)</h1>
+    <h1>Kalkulator Portfela</h1>
     <form id="form">
       <div class="input-group">
         <label>Depozyt (PLN)</label>
